--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
 <main class="main-index">
 <section class="section-first">
+    <img src=".images/people-in-office.jpg" width="1440" height="600" alt="office"/>
     <div class="container">
+
     <h1 class="heading-one">Effective Solutions for Your Business </h1>
         <button type="button" class="button">Order Service</button>
     </div>
