--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
             <a href="./" class="logo link">Web<span class="span">Studio</span></a>
                 <ul class="list-menu">
-                     <li><div><a class="first link" href="./index.html" >Studio</a></li>
+                     <li><a class="first link" href="./index.html" >Studio</a></li>
                      <li><a class="first link" href="./portfolio.html"> Portfolio </a> </li>
                      <li><a class="first link" href="" >Contacts</a> </li>
                 </ul>
