--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <h2 class="heading-two"> What are we doing </h2>
 
     <ul class="list-section-three">
-    <li class="list-item-three"> <img src="./images/mac.jpg" width="360" height="300" alt="mac" /></li>
+    <li class="list-item-three"><img src="./images/mac.jpg" width="360" height="300" alt="mac" /></li>
     <li class="list-item-three"><img src="./images/smartphone.jpg" width="360" height="300" alt="phone" /></li>
     <li class="list-item-three"><img src="./images/smartphoneandcomputer.jpg" width="360" height="300" alt="anyway" /></li>
     </ul>
@@ -79,10 +79,10 @@
     <div class="container">
     <h2 class="heading-two">Our Team</h2>
 <ul class="list-section-four">
-    <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p></div></li>
-    <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer </p></div></li>
-    <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing          </p></div></li>
-    <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer        </p></div></li>
+    <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list"><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon-social-media" width="16" height="16"></svg><use href="./images/icons.svg#icon-insta-n"></use> </svg> </a> </li></div></li>
+    <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon-social-media" width="16" height="16"></svg><use href="./images/icons.svg#icon-tw-n"></use> </svg> </a> </li></div></li>
+    <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing          </p><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon-social-media" width="16" height="16"></svg><use href="./images/icons.svg#icon-fb-n"></use> </svg> </a> </li></div></li>
+    <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer        </p><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg xmlns="http://www.w3.org/2000/svg" class="svg-icon-social-media" width="16" height="16"></svg><use href="./images/icons.svg#icon-in-n"></use> </svg> </a> </li></div></li></ul>
 </ul>
     </div>
 </section>
