--- a/index.html
+++ b/index.html
@@ -91,37 +91,29 @@
     <h2 class="heading-two">Customers</h2>
 <ul class="customers-list">
 
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-amd-sz"></use></svg>></a></li>
-
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-book-sz"></use></svg>></a></li>
-
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-nut-sz"></use></svg>></a></li>
-
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-tear-sz"></use></svg>></a></li>
-
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-leaf-sz"></use></svg>></a></li>
-
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-comp-sz"></use></svg>></a></li>
-
-
+<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-amd-sz"></use></svg></a></li>
+<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-book-sz"></use></svg></a></li>
+<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-nut-sz"></use></svg></a></li>
+<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-tear-sz"></use></svg></a></li>
+<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-leaf-sz"></use></svg></a></li>
+<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-comp-sz"></use></svg></a></li>
 </ul>
-
-
 </div>
-
-
-
-
-
-
-
 </section>
 </main>
 
 
     <footer class="footer">
         <div class="container">
-        <a href="" class="logo-footer link">Web<span class="span-footer">Studio</span></a><p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="div-footer"><a href="" class="logo-footer link">Web<span class="span-footer">Studio</span></a><p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p></div>
+    </div>
+    <div class="container-social-networks"><p class="p-social-networks">Social media</p>
+        <ul class="social-networks-list">
+            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
+            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-tw-n"></use></svg></li>
+            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-fb-n"></use></svg></li>
+            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-in-n"></use></svg></li>
+        </ul>
     </div>
     </footer> 
 </body>
