--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <h2 class="visually-hidden">pusty</h2>
 
     <ul class="list-section-two">
-        <li class="list-item-two"><div class="container-list-icon"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"><use href=".images/icons.svg#icon-strategy"></use></svg> </div><h3 class="heading-three">Strategy</h3><p class="p-one">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p></li>
-        <li class="list-item-two"><div class="container-list-icon"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"><use href=".images/icons.svg#icon-punctuality"></use></svg> </div><h3 class="heading-three">Punctuality</h3><p class="p-one">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-        <li class="list-item-two"><div class="container-list-icon"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"><use href=".images/icons.svg#icon-diligence"></use></svg> </div><h3 class="heading-three">Diligence</h3><p class="p-one">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-        <li class="list-item-two"><div class="container-list-icon"><svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"><use href=".images/icons.svg#icon-technologies"></use></svg> </div><h3 class="heading-three">Technologies</h3><p class="p-one">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href=".images/icons.svg#icon-strategy"></use></svg></div><h3 class="heading-three">Strategy</h3><p class="p-one">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href=".images/icons.svg#icon-punctuality"></use></svg></div><h3 class="heading-three">Punctuality</h3><p class="p-one">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href=".images/icons.svg#icon-diligence"></use></svg></div><h3 class="heading-three">Diligence</h3><p class="p-one">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href=".images/icons.svg#icon-technologies"></use></svg></div><h3 class="heading-three">Technologies</h3><p class="p-one">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
     </ul>
     </div>
 </section>
@@ -79,10 +79,10 @@
     <div class="container">
     <h2 class="heading-two">Our Team</h2>
 <ul class="list-section-four">
-    <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list"><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-insta-n"></use> </svg> </a> </li></div></li>
-    <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%" ><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-tw-n"></use> </svg> </a> </li></div></li>
-    <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing          </p><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-fb-n"></use> </svg> </a> </li></div></li>
-    <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer        </p><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-in-n"></use> </svg> </a> </li></div></li></ul>
+    <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list"><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li></div></li>
+    <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%" ><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-tw-n"></use></svg></a></li></div></li>
+    <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing          </p><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-fb-n"></use></svg></a></li></div></li>
+    <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer        </p><li class="social-media-blue"><a href="social-media-icon-link" width="100%" height="100%"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-in-n"></use></svg></a></li></div></li></ul>
 </ul>
     </div>
 </section>
@@ -110,9 +110,9 @@
     <div class="container-social-networks"><p class="p-social-networks">Social media</p>
         <ul class="social-networks-list">
             <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
-            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-tw-n"></use></svg></li>
-            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-fb-n"></use></svg></li>
-            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-in-n"></use></svg></li>
+            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
+            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
+            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
         </ul>
     </div>
     </footer> 
