--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     <div class="container"> 
         <h2 class="heading-two">Our Team</h2>
         <ul class="list-section-four">
-    <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list"><li class="social-media-blue"><a href="social-media-icon-link"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-insta-n"></use></svg></li></div></li>
-    <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media-blue"><a href="social-media-icon-link"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-tw-n"></use></svg></a></li></div></li>
-    <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing          </p><li class="social-media-blue"><a href="social-media-icon-link"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-fb-n"></use></svg></a></li></div></li>
-    <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer        </p><li class="social-media-blue"><a href="social-media-icon-link"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-in-n"></use></svg></a></li></div></li>
+    <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p><ul class="social-media-list"><li class="#social-media-blue"><a href="social-media-icon-link"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-insta-n"></use></svg></li></div></li>
+    <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer </p><li class="social-media-blue"><a href="#social-media-icon-link"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-tw-n"></use></svg></a></li></div></li>
+    <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing          </p><li class="social-media-blue"><a href="#social-media-icon-link"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-fb-n"></use></svg></a></li></div></li>
+    <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer        </p><li class="social-media-blue"><a href="#social-media-icon-link"><svg  class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-in-n"></use></svg></a></li></div></li>
 
 </ul>
         </ul>
@@ -93,12 +93,12 @@
     <h2 class="heading-two">Customers</h2>
 <ul class="customers-list">
 
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-amd-sz"></use></svg></a></li>
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-book-sz"></use></svg></a></li>
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-nut-sz"></use></svg></a></li>
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-tear-sz"></use></svg></a></li>
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-leaf-sz"></use></svg></a></li>
-<li class="customer-list"><a href="customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-comp-sz"></use></svg></a></li>
+<li class="customer-list"><a href="#customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-amd-sz"></use></svg></a></li>
+<li class="customer-list"><a href="#customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-book-sz"></use></svg></a></li>
+<li class="customer-list"><a href="#customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-nut-sz"></use></svg></a></li>
+<li class="customer-list"><a href="#customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-tear-sz"></use></svg></a></li>
+<li class="customer-list"><a href="#customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-leaf-sz"></use></svg></a></li>
+<li class="customer-list"><a href="#customer-link" width="100%" height="100%"><svg width="104" height="56" class="svg-customer-link"><use href="./images/icons.svg#icon-comp-sz"></use></svg></a></li>
 </ul>
 </div>
 </section>
@@ -111,10 +111,10 @@
     </div>
     <div class="container-social-networks"><p class="p-social-networks">Social media</p>
         <ul class="social-networks-list">
-            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
-            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
-            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
-            <li class="social-media-footer" href="social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
+            <li class="social-media-footer" href="#social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
+            <li class="social-media-footer" href="#social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
+            <li class="social-media-footer" href="#social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
+            <li class="social-media-footer" href="#social-media-footer-link" width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></li>
         </ul>
     </div>
     </footer> 
