--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container"> 
         <h2 class="heading-two">Our Team</h2>
         <ul class="list-section-four">
-    <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><li class="#social-media-blue"><a href="social-media-icon-link"><svg class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-insta-n"></use></svg><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p></li></div>
+    <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />  <div class="name"><ul class="social-media-list"><li class="#social-media-blue"><a href="#social-media-icon-link"></a><svg class="svg-icon-social-media" width="16" height="16"><use href="./images/icons.svg#icon-insta-n"></use></svg><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p></li></ul></div>
     <li class="list-one"><img src="./images/tomford.jpg" width="264" height="260" alt="tom" />        <div class="name"><li> <h3 class="heading-three">Tom Ford</h3>     <p class="p-two">Frontend Developer </p></li></div>
     <li class="list-one"><img src="./images/camilagarcia.jpg" width="264" height="260" alt="camila" /><div class="name"><li> <h3 class="heading-three">Camila Garcia</h3><p class="p-two">Marketing          </p></li></div>
     <li class="list-one"><img src="./images/danielwilson.jpg" width="264" height="260" alt="daniel" /><div class="name"><li> <h3 class="heading-three">Daniel Wilson</h3><p class="p-two">UI Designer        </p></li></div>
