--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <h2 class="visually-hidden">pusty</h2>
 
     <ul class="list-section-two">
-        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href=".images/icons.svg#icon-strategy"></use></svg></div><h3 class="heading-three">Strategy</h3><p class="p-one">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
-        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href=".images/icons.svg#icon-punctuality"></use></svg></div><h3 class="heading-three">Punctuality</h3><p class="p-one">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href=".images/icons.svg#icon-diligence"></use></svg></div><h3 class="heading-three">Diligence</h3><p class="p-one">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href=".images/icons.svg#icon-technologies"></use></svg></div><h3 class="heading-three">Technologies</h3><p class="p-one">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href="./images/icons.svg#icon-strategy"></use></svg></div><h3 class="heading-three">Strategy</h3><p class="p-one">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p></li>
+        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href="./images/icons.svg#icon-punctuality"></use></svg></div><h3 class="heading-three">Punctuality</h3><p class="p-one">Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
+        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href="./images/icons.svg#icon-diligence"></use></svg></div><h3 class="heading-three">Diligence</h3><p class="p-one">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
+        <li class="list-item-two"><div class="container-list-icon"><svg width="64" height="64"><use href="./images/icons.svg#icon-technologies"></use></svg></div><h3 class="heading-three">Technologies</h3><p class="p-one">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
     </ul>
     </div>
 </section>
