--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="nav">
             
             <a href="./" class="logo link">Web<span class="span">Studio</span></a>
-                <ul class="list-menu">
+                <ul class="list list-menu">
                      <li><a class="first link" href="./index.html" >Studio</a></li>
                      <li><a class="first link" href="./portfolio.html"> Portfolio </a> </li>
                      <li><a class="first link" href="" >Contacts</a> </li>
@@ -25,7 +25,7 @@
 </nav>
 
     <address class="address">
-        <ul class="list-address">
+        <ul class="list list-address">
             <li><a href="mailto:info@devstudio.com" class="contact link">info@devstudio.com</a></li>
             <li><a href="tel:+110001111111" class="contact link">+11 (000) 111-11-11</a></li>
         </ul>
@@ -78,7 +78,7 @@
 <section class="section-four">
     <div class="container"> 
         <h2 class="heading-two">Our Team</h2>
-        <ul class="list-section-four">
+        <ul class="list list-section-four">
     <li class="list-one"><img src="./images/markguerrero.jpg" width="264" height="260" alt="mark" />
 
         <div class="name"><h3 class="heading-three">Mark Guerrero</h3><p class="p-two">Product Designer   </p> 
