--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
     </div>
     <div class="container-social-networks"><p class="p-social-networks">Social media</p>
         <ul class="social-networks-list">
-            <li class="social-media-footer"> <a href="social-media-footer-link"> width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-            <li class="social-media-footer"> <a href="social-media-footer-link"> width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-            <li class="social-media-footer"> <a href="social-media-footer-link"> width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
-            <li class="social-media-footer"> <a href="social-media-footer-link"> width="100%" height="100%"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
+            <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
+            <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
+            <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
+            <li class="social-media-footer"> <a href="social-media-footer-link"><svg width="24" height="24" class="svg-social-media-footer"><use href="./images/icons.svg#icon-insta-n"></use></svg></a></li>
         </ul>
     </div>
     </footer> 
